# diskinfo

./: .coveragerc  .flake8  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirement-dev.txt  requirements-dev.txt
.github/workflows/: publish.yml  test.yml
doc/disk_info/: demo.html  disk.html  disk_info.html  index.html
docs/: requirements-docs.txt
docs/source/: api.rst  conf.py  disk.rst  diskinfo.rst  disksmart.rst  disktype.rst  filesystem.rst  index.rst  intro.rst  nvmeattr.rst  partition.rst  smartattr.rst  utils.rst
src/disk_info/: __init__.py  demo.py  disk.py  disk_info.py
src/diskinfo/: __init__.py  demo.py  disk.py  diskinfo.py  disksmart.py  disktype.py  filesystem.py  partition.py  utils.py
test/: __init__.py  test_data.py  test_data_smart.py  test_disk.py  test_disk_info.py  test_diskinfo.py  test_disksmart.py  test_filesystem.py  test_partition.py  test_utils.py
