[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diskinfo"
description = "Disk information Python library for Linux"
readme = "README.md"
version = "2.1.2"
authors = [
    { name = "Peter Sulyok", email = "peter@sulyok.net" }
]
requires-python = ">=3.7"
keywords = ["disk", "linux"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
"Homepage" = "https://github.com/petersulyok/diskinfo"
"Documentation" = "https://diskinfo.readthedocs.io/en/latest/index.html"

# pytest options
[tool.pytest.ini_options]
pythonpath = "src"
filterwarnings = [ "default", "ignore::pytest.PytestCollectionWarning"]

# coverage options
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "unittest.main()"
    ]
omit = [ "src/diskinfo/demo.py" ]

# pylint options
[tool.pylint.'MASTER']
init-hook='import sys; sys.path.append("."); sys.path.append("./src"); sys.path.append("./test")'

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "protected-access", "line-too-long", "too-many-instance-attributes", "too-many-branches", "invalid-name",
    "too-few-public-methods", "too-many-statements", "broad-except", "too-many-locals", "too-many-arguments",
    "missing-module-docstring", "parse-error", "duplicate-code", "too-many-public-methods", "unused-variable"
    ]
