[project]
name = "diskinfo"
description = "Disk information Python library for Linux"
version = "3.2.0"
readme = "README.md"
authors = [ 
    { name = "Peter Sulyok", email = "peter@sulyok.net" } 
]
requires-python = ">=3.10, <4"
keywords = ["disk", "linux"]
license= "MIT"
license-files= ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
    "pySMART",
    "pyudev"
]

[dependency-groups]
dev = [
    "build",
    "coverage",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "twine"
]
lint = [
    "ruff",
    "pylint"
]
doc = [
    "alabaster",
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-copybutton"
]
demo = [
    "rich"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/petersulyok/diskinfo"
Changelog = "https://github.com/petersulyok/diskinfo/CHANGELOG.md"
Documentation = "https://diskinfo.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/petersulyok/diskinfo/issues"

# uv options
[tool.uv]
default-groups = [ "dev", "lint", "doc" ]

# pytest options
[tool.pytest.ini_options]
pythonpath = "src"
filterwarnings = [
    "default",
    "ignore::UserWarning",
    "ignore::pytest.PytestCollectionWarning"
]

# coverage options
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "unittest.main()"
]
omit = [
    "src/diskinfo/demo.py"
]

# ruff options
[tool.ruff.lint]
select = ["Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

# pylint options
[tool.pylint.main]
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "line-too-long", "missing-module-docstring", "too-many-locals", "too-many-branches", "too-many-arguments",
    "too-many-positional-arguments", "too-many-statements", "invalid-name", "protected-access",
    "too-many-instance-attributes", "too-many-public-methods", "too-few-public-methods", "duplicate-code",
    "too-many-lines"
]
